# SmartCities

./: .gitignore  README.md  SPEC.md  generate_datasets.py  main.py  package-lock.json  pyproject.toml  run_analysis.py  run_rag.py  save_model.py  train_baselines.py  train_dl_models.py  train_model.py
backend/models/: sentiment_svm.pkl
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/components/: ComplaintForm.jsx  RAGChat.jsx
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
models/: sentiment_lgbm.joblib  sentiment_svm.joblib
notebooks/: deep_learning_save_guide.md  raa_dev.ipynb  raa_phase3_deep_learning.ipynb  raa_phase3_models.ipynb  raa_phase4_analysis.ipynb
src/: api.py  config.py  dl_models.py  embeddings.py  llm_client.py  models.py  preprocessor.py  rag_engine.py
