[project]
name = "raa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightgbm>=4.6.0",
    "ollama>=0.6.1",
    "sentence-transformers>=5.2.0",
    "squarify>=0.4.4",
    "textblob>=0.19.0",
    "wordcloud>=1.9.5",
    "xgboost>=3.1.3",
]
